--- a/backend/src/viewsEjs/articulos.ejs
+++ b/backend/src/viewsEjs/articulos.ejs
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Articulos Ejs</title>
 </head>
 <body>
-    <%=title%>
-    <%=price%>
-    <%=description%>
+    <%productos.forEach(function(producto){%>
+        <div>
+            <p><%=producto.title%></p>
+            <p><%=producto.price%></p>
+            <p><%=producto.description%></p>
+            <img src="<%=producto.thumbnail%>" alt="">
+        </div>
+
+    <%})%>
+    
 </body>
 </html>
