--- a/backend/src/public/templates/productsTable.handlebars
+++ b/backend/src/public/templates/productsTable.handlebars
@@ -3,6 +3,8 @@
 <div>
     <p>
         {{this.title}}
+        {{this.description}}
+        {{this.stock}}
     </p>
     <img src={{this.thumbnail}}>
 </div>
